--- a/ChatGPT/app/src/main/res/layout/view_answer_item.xml
+++ b/ChatGPT/app/src/main/res/layout/view_answer_item.xml
@@ -17,17 +17,26 @@
         >
 
         <TextView
-            android:id="@+id/message_value"
+            android:id="@+id/answer_value"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_medium"
             android:layout_marginVertical="@dimen/margin_large"
-            style="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintBottom_toBottomOf="parent"
+            style="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Hello World"
+            />
+
+        <Button
+            android:id="@+id/button_share_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_share_message_label"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            app:layout_constraintTop_toBottomOf="@id/answer_value"
+            app:layout_constraintEnd_toEndOf="parent"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
