--- a/ChatGPT/app/src/main/res/layout/view_question_item.xml
+++ b/ChatGPT/app/src/main/res/layout/view_question_item.xml
@@ -15,7 +15,7 @@
         >
 
         <TextView
-            android:id="@+id/message_value"
+            android:id="@+id/question_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello World!"
