--- a/ChatGPT/app/src/main/res/layout/view_question_item.xml
+++ b/ChatGPT/app/src/main/res/layout/view_question_item.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello World!"
-            android:layout_marginVertical="@dimen/margin_medium"
+            android:layout_marginVertical="@dimen/margin_large"
             android:layout_marginHorizontal="@dimen/margin_small"
             style="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintStart_toStartOf="parent"
