Aula 9 RecyclerView parte 2

--- a/ChatGPT/app/src/main/res/layout/view_answer_item.xml
+++ b/ChatGPT/app/src/main/res/layout/view_answer_item.xml
@@ -27,6 +27,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Hello World"
+            tools:visibility="gone"
             />
 
         <Button
