base app for class

--- a/Countries/app/src/main/res/layout/activity_countries.xml
+++ b/Countries/app/src/main/res/layout/activity_countries.xml
@@ -5,21 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CountriesActivity"
-    >
+    tools:context=".CountriesActivity">
 
     <fragment
-        android:id="@+id/container_countries"
+        android:id="@+id/nav_host_fragment_container_countries"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:defaultNavHost="true"
         app:navGraph="@navigation/navigation_graph"
         android:name="androidx.navigation.fragment.NavHostFragment"
+        app:defaultNavHost="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
